--- a/week_5/Tf_Idf.ipynb
+++ b/week_5/Tf_Idf.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2016總統就職演講稿 詞頻分析\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,10 +25,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 36,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### 讀取講稿txt\n",
+    "每句話分開來讀取"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Building prefix dict from the default dictionary ...\n",
+      "Loading model from cache c:\\users\\s9723\\appdata\\local\\temp\\jieba.cache\n",
+      "Loading model cost 1.663 seconds.\n",
+      "Prefix dict has been built succesfully.\n"
+     ]
+    }
+   ],
    "source": [
     "f = io.open('presidentSpeech.txt', 'r',encoding = 'UTF-8')\n",
     "text=list()\n",
@@ -33,79 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IOError",
-     "evalue": "[Errno 2] No such file or directory: '-f'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIOError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-8-739ae5c7a770>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mcorpus\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0margv\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'r'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[0mcorpus\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\" \"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mjieba\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcut\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mline\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m','\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcut_all\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIOError\u001b[0m: [Errno 2] No such file or directory: '-f'"
-     ]
-    }
-   ],
-   "source": [
-    "corpus = []\n",
-    "with open(sys.argv[1], 'r') as f:\n",
-    "    for line in f:\n",
-    "        corpus.append(\" \".join(jieba.cut(line.split(',')[0], cut_all=False)))\n",
-    "\n",
-    "vectorizer = TfidfVectorizer()\n",
-    "tfidf = vectorizer.fit_transform(corpus)\n",
-    "print tfidf.shape\n",
-    "\n",
-    "words = vectorizer.get_feature_names()\n",
-    "for i in xrange(len(corpus)):\n",
-    "    print '----Document %d----' % (i)\n",
-    "    for j in xrange(len(words)):\n",
-    "        if tfidf[i,j] > 1e-5:\n",
-    "              print words[j].encode('utf-8'), tfidf[i,j]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "F='不要說你愛我你想我　如果你的心裡沒有這麼做'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corpus = []\n",
-    "corpus.append(\" \".join(jieba.cut(F.split(',')[0], cut_all=False)))\n",
-    "corpus.append(\" \".join(jieba.cut(F.split(',')[0], cut_all=False)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[u'\\u4e0d\\u8981 \\u8aaa \\u4f60 \\u611b\\u6211 \\u4f60 \\u60f3 \\u6211 \\u3000 \\u5982\\u679c \\u4f60 \\u7684 \\u5fc3\\u88e1 \\u6c92\\u6709 \\u9019\\u9ebc \\u505a', u'\\u4e0d\\u8981 \\u8aaa \\u4f60 \\u611b\\u6211 \\u4f60 \\u60f3 \\u6211 \\u3000 \\u5982\\u679c \\u4f60 \\u7684 \\u5fc3\\u88e1 \\u6c92\\u6709 \\u9019\\u9ebc \\u505a']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print corpus"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -569,13 +523,7 @@
       "解決 0.126461663375\n",
       "訴訟 0.126461663375\n",
       "質疑 0.126461663375\n",
-      "身為 0.105684435256\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "身為 0.105684435256\n",
       "遵循 0.126461663375\n",
       "選舉 0.211368870513\n",
       "阿扁 0.145506615639\n",
@@ -585,7 +533,13 @@
       "下雨 0.285199581575\n",
       "今天 0.238342244674\n",
       "冷靜 0.285199581575\n",
-      "我們 0.360284555734\n",
+      "我們 0.360284555734\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "時候 0.285199581575\n",
       "更加 0.285199581575\n",
       "正是 0.285199581575\n",
@@ -1038,13 +992,7 @@
       "總統 0.0677928096102\n",
       "能夠 0.0858006704678\n",
       "至於 0.109605767664\n",
-      "規定 0.109605767664\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "規定 0.109605767664\n",
       "議題 0.219211535328\n",
       "責任 0.171601340936\n",
       "這些 0.0858006704678\n",
@@ -1065,7 +1013,13 @@
       "四年 0.183079538196\n",
       "國際 0.261100833723\n",
       "必須 0.324050126874\n",
-      "情勢 0.219072400529\n",
+      "情勢 0.219072400529\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "提升 0.154020523632\n",
       "政經 0.219072400529\n",
       "明顯 0.19801792577\n",
@@ -1522,13 +1476,7 @@
       "形式 0.129770305172\n",
       "態度 0.129770305172\n",
       "應該 0.0802648782001\n",
-      "我們 0.0546450506558\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "我們 0.0546450506558\n",
       "或者 0.108449478278\n",
       "排除 0.129770305172\n",
       "政治 0.0871286513836\n",
@@ -1546,7 +1494,13 @@
       "相當 0.129770305172\n",
       "看待 0.129770305172\n",
       "社會 0.0589440513058\n",
-      "能夠 0.101585705094\n",
+      "能夠 0.101585705094\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "自由 0.101585705094\n",
       "自由民主 0.129770305172\n",
       "萬台灣 0.117298420955\n",
