--- a/week_5/Tf_Idf.ipynb
+++ b/week_5/Tf_Idf.ipynb
@@ -58,6 +58,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 詞頻分析\n",
+    "以每一句話為單位計算Tf_Idf"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
